# PBL5-talent-platform-it-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.py  test_simple.py
app/: README.md  config.py  dependencies.py  main.py
app/data/: cv_user.csv
app/middleware/: __init__.py  error_handler.py
app/models/: README.md  __init__.py  application_models.py  chat.py  chatbot.py  core.py  cv_models.py  enums.py  job_models.py  job_search_models.py  request_response.py  responses.py
app/models/response/: cv_responses.py  match_responses.py
app/prompts/: __init__.py  chart_insights_prompt.py  chat_system_prompt.py  chatbot_system_prompt.py  cv_analysis_prompt.py  cv_improvement_prompt.py  qa_prompt.py  rewrite_prompt.py  sql_prompt.py
app/routers/: README.md  __init__.py  candidates.py  chat.py  chatbot.py  cv.py  jobs.py  matching.py  utils.py
app/services/: README.md  __init__.py  ai_analysis.py  api_key_manager.py  candidate_matching.py  chat_service.py  chatbot_service.py  chroma_utils.py  conversation_service.py  db_utils.py  llm_service.py  match_explain.py  pg_database.py  rag_helpers.py  rag_matching.py  retrieval_service.py
app/tests/: test_rag_matching.py
app/utils/: __init__.py  date_utils.py  pdf_parser.py  validators.py
scripts/: import_csv_to_postgres.py
